# ChangeLog for app-emulation/qemu-user
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/qemu-user/ChangeLog,v 1.38 2009/11/14 13:27:18 scarabeus Exp $

  14 Nov 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  -qemu-user-0.9.1.ebuild:
  Drop old masked version.

*qemu-user-0.10.1 (22 Mar 2009)

  22 Mar 2009; Luca Barbato <lu_zero@gentoo.org> +qemu-user-0.10.1.ebuild:
  Bugfix release

  12 Mar 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  qemu-user-0.10.0.ebuild:
  Remove binchecks restriction (package installs binaries!).

  12 Mar 2009; Luca Barbato <lu_zero@gentoo.org> qemu-user-0.10.0.ebuild:
  Simplify hardened support

  10 Mar 2009; Luca Barbato <lu_zero@gentoo.org> qemu-user-0.10.0.ebuild:
  Fix leftover from kvm ebuild import

*qemu-user-0.10.0 (07 Mar 2009)

  07 Mar 2009; Luca Barbato <lu_zero@gentoo.org> +qemu-user-0.10.0.ebuild:
  New version

  01 Feb 2008; Luca Barbato <lu_zero@gentoo.org>
  -files/qemu-user-0.7.0-errno.patch, -files/qemu-0.8.0-gcc4-hacks.patch,
  -files/qemu-0.8.0-stwbrx.patch, -files/qemu-ppc-dirty-hack.patch,
  -qemu-user-0.8.0.ebuild, -qemu-user-0.8.0.20060329.ebuild,
  -qemu-user-0.8.1.ebuild, -qemu-user-0.8.2.ebuild:
  Remove qemu-0.8 series

*qemu-user-0.9.1 (27 Jan 2008)

  27 Jan 2008; Luca Barbato <lu_zero@gentoo.org> +qemu-user-0.9.1.ebuild:
  Version bump

  02 Jul 2007; Piotr Jaroszyński <peper@gentoo.org> qemu-user-0.8.0.ebuild,
  qemu-user-0.8.0.20060329.ebuild, qemu-user-0.8.1.ebuild,
  qemu-user-0.8.2.ebuild, qemu-user-0.9.0.ebuild:
  (QA) RESTRICT clean up.

  20 May 2007; Christian Faulhammer <opfer@gentoo.org>
  qemu-user-0.9.0.ebuild:
  stable amd64, security bug 176674

  16 May 2007; Luca Barbato <lu_zero@gentoo.org> qemu-user-0.9.0.ebuild:
  Marked ppc

  08 May 2007; Markus Ullmann <jokey@gentoo.org> qemu-user-0.9.0.ebuild:
  Stable on x86 wrt security bug #176674
