@@ -1,9 +1,11 @@
 AUX qemu-0.7.0-ppc-linker.patch 11509 RMD160 d92e368e6adc2e6acdb97d92221781337d5322f7 SHA1 897be37b49b7908ea64972cd20ada0bb4def70cc SHA256 26d3832f1ff70d9d29f06cf8c6e1c1ac4ad353854c9b3b510875d2330ab6d2f9
 DIST qemu-0.10.0.tar.gz 3657649 RMD160 d9175b98d161d2eca0fa61471506e98f3d8f26af SHA1 87b6aa3b201dcdfd91d83c27b2d3e4495770c351 SHA256 3c5ecf320996ad243b7adc4798ad5dbfd58a6d5562cc0317a4cde7c7fb3edbb2
 DIST qemu-0.10.1.tar.gz 3658024 RMD160 f1dcd14a6981180b40b3048769bf861ac86fa0b3 SHA1 d1cafd4751e4feee606feb844dec4762713b2b69 SHA256 c21170fc4ec80154263686813f7e5a14e6ecebf8320931cd3002119742757cb6
+DIST qemu-0.12.2.tar.gz 4691757 RMD160 00d5a89eb069ffb0267c677d946671a27948594d SHA1 9e826ea1458d358598fbf61ab577c8f849cd99c1 SHA256 accec2eec7dbd89e0b49474d1a0277ae3e7239a7700754b1cfb192f091766843
 DIST qemu-0.9.0.tar.gz 1901741 RMD160 4296542b6da18a6ac93d20787330d3c1c2ac0a19 SHA1 1e57e48a06eb8729913d92601000466eecef06cb SHA256 491facf9335654967ee53d8fb3540a274bfcbdcc225506bd38c4ee8e9ab405c1
 EBUILD qemu-user-0.10.0.ebuild 1889 RMD160 276b7230562b6d00ed7fa4f807514a7dac61e4cb SHA1 7125ae6ce81c123bebbe410ea7a66da06f7c5838 SHA256 841a3857da97ad5df660bcc3e1294904c6e2d551df86f865693ed8ca43f79f3e
 EBUILD qemu-user-0.10.1.ebuild 1889 RMD160 915b2defbff171d34f6260a537f187f0536c6aa9 SHA1 82e5c853b093fa459377443c7cea5151b1df6853 SHA256 6089e71e207088fb9b4214284035af61a02e285335df75aa7bcb0e93fdf4df92
+EBUILD qemu-user-0.12.2.ebuild 1754 RMD160 5f5b5f517d07889f13f61af1741d096b79e45bdf SHA1 d11747cee7fc11a22620dea6ca720c7c843ebe62 SHA256 b8ca632052d78d8e267ca55a03234a262ad2639683a9ee14c8fdc4d58dd1a024
 EBUILD qemu-user-0.9.0.ebuild 2385 RMD160 878466bbe7fb8f15cf86613aee4937b5cc3f3229 SHA1 e0df500334c37bfee2c10ec0bc1fbab4f1f7f412 SHA256 76e45f6a629e5a4bca4ecdaad2a2eb8fc4a22df6e31356adabbec87ec272ba6d
-MISC ChangeLog 5449 RMD160 1006bb188d27507732a9e3a56a5bbe694e662244 SHA1 c76161a549f1d7eb1e8a9716a65b22090f13f5da SHA256 cf03cc481a07f16ff3851c11f5517dc5b526d36d26a5e6283a8df966654be8a1
+MISC ChangeLog 5626 RMD160 30287cccb36184015311a9aa3965edc2ae46fe2a SHA1 eca9b2c8283fd9f6c2537a7af5d5a94346dd8007 SHA256 506aa43e31f6b26634a87a3abeb8b624e00f3e548d7c2df0ba3c28d481a1538b
 MISC metadata.xml 223 RMD160 f054e67dff10c87ea1d0b5753124445be6bd4610 SHA1 fcf66d2b271369d296150dde06603d850623ed27 SHA256 64a96c3c9929aec46b50a63ae1fd8c46cef4a8423f448d6f6fff09e20510c98b
